manifests/namespaces/istio-system/virtualservice/api-minio-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-minio-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "api.minio.zufardhiyaulhaq.com"
  gateways:
  - istio-system/api-minio-zufardhiyaulhaq-com-gateway
  http:
  - name: "rook-ceph-rgw-kubernetes-store-infrastructure-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 80
          host: rook-ceph-rgw-kubernetes-store.infrastructure.svc.cluster.local
  exportTo:
    - "."
