manifests/namespaces/istio-system/virtualservice/minio-serverless-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-serverless-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "minio.serverless.zufardhiyaulhaq.com"
  gateways:
  - istio-system/minio-serverless-zufardhiyaulhaq-com-gateway
  http:
  - name: "minio-serverless-infrastructure-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 9000
          host: minio-serverless.infrastructure.svc.cluster.local
  exportTo:
    - "."
